force-app/main/default/objects/Contact/fields/Account_Role__c.field-meta.xml
<CustomField>
    <fullName>Account_Role__c</fullName>
    <description>PGP-0019 - Add primary contact field to select Account Role</description>
    <label>Account Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary Contact</fullName>
            </value>
            <value>
                <fullName>Secondary Contact</fullName>
            </value>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Event Guest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>