force-app/main/default/objects/Contact/fields/Is_BirthDay_Today__c.field-meta.xml
<CustomField>
    <fullName>Is_BirthDay_Today__c</fullName>
    <description>PGP-0023 - Formula to  check contact Birthday.</description>
    <formula>If( 
AND(
DAY(Birthdate) = DAY(TODAY()),
MONTH(Birthdate) = MONTH(TODAY())),
true,
false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is BirthDay Today</label>
    <type>Checkbox</type>
</CustomField>