force-app/main/default/objects/Contact/fields/Is_Valid_Email__c.field-meta.xml
<CustomField>
    <fullName>Is_Valid_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PGP-0007 : This field value stores whether given Email field value is valid or not.</description>
    <label>Is Valid Email</label>
    <type>Checkbox</type>
</CustomField>