force-app/main/default/objects/Contact/fields/Linked_In_Failure_Post__c.field-meta.xml
<CustomField>
    <fullName>Linked_In_Failure_Post__c</fullName>
    <description>PGP-0013 - Capture number of failure posts.</description>
    <label>Linked In Failure Post</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>