force-app/main/default/objects/Contact/fields/Linked_In_Success_Post__c.field-meta.xml
<CustomField>
    <fullName>Linked_In_Success_Post__c</fullName>
    <description>PGP-0013 - Capture number of success posts</description>
    <label>Linked In Success Post</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>