force-app/main/default/objects/Contact/fields/Total_Linked_In_Messages__c.field-meta.xml
<CustomField>
    <fullName>Total_Linked_In_Messages__c</fullName>
    <description>PGP-0013 : Capture number of Linked In Post</description>
    <label>Total Linked In Messages</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>